src/objects/SubmissionPpiAssociation__c.object
<CustomObject>
    <fields>
        <fullName>PovertyLineIdentifier__c</fullName>
        <description>The identifier of the Poverty Line that this value is from</description>
        <formula>PpiTableLine__r.PpiTable__r.Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Poverty Line Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PovertyLineName__c</fullName>
        <description>The name of the Poverty Line that this value is from</description>
        <formula>PpiTableLine__r.PpiTable__r.PovertyLine__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Poverty Line Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PpiResult__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The PPI Result record that this value belongs to</description>
        <label>PPI Result</label>
        <referenceTo>PpiResult__c</referenceTo>
        <relationshipLabel>Submission PPI Associations</relationshipLabel>
        <relationshipName>Submission_Ppi_Associations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PpiTableLine__c</fullName>
        <description>The PPI Table line that this record maps to</description>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PPI Table Line</label>
        <referenceTo>PPITableLine__c</referenceTo>
        <relationshipLabel>Submission PPI Associations</relationshipLabel>
        <relationshipName>Submission_Ppi_Associations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>The probability taken from the PPI Table Line that this submission value maps to</description>
        <formula>PpiTableLine__r.Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <description>The Submission record that this value belongs to</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>Submission__c</referenceTo>
        <relationshipLabel>Submission PPI Associations</relationshipLabel>
        <relationshipName>Submission_Ppi_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Submission PPI Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPA-{0000000000}</displayFormat>
        <label>Junction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission PPI Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>